# android-emulator-container-scripts

./: README.md  REGISTRY.MD  TROUBLESHOOTING.md  create_web_container.sh
cloud-init/: README.MD
emu/templates/: emulator.README.MD  launch-emulator.sh
gateway/: .gitignore  DEMO.md  PROTOCOL.md  launch_video_demo.sh  pyproject.toml  setup.py  setup_env.sh
gateway/src/videobridge_gateway/: __init__.py  gateway_server.py
gateway/tests/: test_gateway_server.py
js/: Makefile  README.md  babel.config.js  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
js/.github/workflows/: deploy.yml
js/cloudbuilders/: Dockerfile  README.md
js/develop/: envoy.yaml
js/docs/: protocol.md
js/example/: README.md  index.html  package-lock.json  package.json  vite.config.js
js/example/src/: App.tsx
js/proto/: emulator_controller.proto
js/src/: App.js  index.ts
js/src/components/emulator/: emulator.tsx
js/src/components/emulator/net/: emulator_status.ts  logger.ts  ws_jsep_protocol_driver.ts
js/src/components/emulator/views/: event_handler.tsx  webrtc_view.tsx
js/src/proto/: emulator_controller_pb.d.ts
js/test/: emulator.test.js  emulator_status.test.js  event_handler.test.js  touch_event_handler.test.js  webrtc_view.test.js  ws_jsep_protocol_driver.test.js
