[build-system]
requires = ["setuptools>=61.0.0", "grpcio-tools>=1.60.0", "protobuf>=4.25.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goldfish-videobridge-gateway"
version = "0.1.0"
description = "A simple python gateway server for the Android Emulator Videobridge"
readme = "DEMO.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "websockets>=12.0",
]

[project.scripts]
videobridge-gateway = "videobridge_gateway.gateway_server:run_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["videobridge_gateway*"]
